maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(!isOverBaggle()){
      keepHandOnSideWall()

}

def keepHandOnSideWall(){
	e
  
  if(isFacingWall()){
    
    //Si mur devant et ? gauche
    right()
    if(!isFacingWall()){
      forward()
        }
    	}
  }
}